packages/swaps-prices/deployment/output/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swaps-prices-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: swaps-prices-ip
    networking.gke.io/managed-certificates: swaps-prices-cert
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: swaps-prices-service
            port:
              number: 3030
